--- a/_posts/2024-10-09-first.md
+++ b/_posts/2024-10-09-first.md
@@ -4,7 +4,9 @@ title:  "첫 포스팅 입니다. 설레내요."
 ---
 
 # 오늘 처음 블로그를 만들었어요.
-앞으로 열심히 해보겠습니다.![photo-1620207418302-439b387441b0](/Users/sjkim/my_project/aiheadstarter-github-blog/aiheadstarter.github.io/images/2024-10-09-first/photo-1620207418302-439b387441b0.jpeg)
+앞으로 열심히 해보겠습니다
+
+![image-20241010001634888](/Users/sjkim/my_project/aiheadstarter-github-blog/aiheadstarter.github.io/images/2024-10-09-first/image-20241010001634888.png)
 
 어쩌구저쩌구
-![image-20241010000556373](/Users/sjkim/my_project/aiheadstarter-github-blog/aiheadstarter.github.io/images/2024-10-09-first/image-20241010000556373.png)
+![image-20241010001707200](/Users/sjkim/my_project/aiheadstarter-github-blog/aiheadstarter.github.io/images/2024-10-09-first/image-20241010001707200.png)
