--- a/_posts/2024-10-09-first.md
+++ b/_posts/2024-10-09-first.md
@@ -1,12 +1,14 @@
 ---
 layout: post
 title:  "첫 포스팅 입니다. 설레내요."
+Typora-root-url:../
 ---
 
 # 오늘 처음 블로그를 만들었어요.
 앞으로 열심히 해보겠습니다
 
-![image-20241010001634888](/Users/sjkim/my_project/aiheadstarter-github-blog/aiheadstarter.github.io/images/2024-10-09-first/image-20241010001634888.png)
+![image-20241010002439495](/2024-10-09-first/image-20241010002439495.png)
 
 어쩌구저쩌구
-![image-20241010001707200](/Users/sjkim/my_project/aiheadstarter-github-blog/aiheadstarter.github.io/images/2024-10-09-first/image-20241010001707200.png)
+
+![image-20241010002509939](/2024-10-09-first/image-20241010002509939.png)
