--- a/_posts/2024-10-09-first.md
+++ b/_posts/2024-10-09-first.md
@@ -9,6 +9,6 @@ Typora-root-url:../
 
 ![image-20241010002439495](/2024-10-09-first/image-20241010002439495.png)
 
-어쩌구저쩌구
+강아지들이 어쩌면 이렇게 귀여울까요^^
 
 ![image-20241010002509939](/2024-10-09-first/image-20241010002509939.png)
