--- a/_posts/2024-10-09-first.md
+++ b/_posts/2024-10-09-first.md
@@ -1,7 +1,9 @@
 ---
+​---
 layout: post
-title:  "첫 포스팅 입니다. 설레내요."
-Typora-root-url:../
+title: "첫 포스팅 입니다. 설레네요."
+Typora-root-url: ../
+​---
 ---
 
 # 오늘 처음 블로그를 만들었어요.
